// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchEntities small xml test 1`] = `
Tree {
  "_deletedIds": Immutable.Set [],
  "_entityTable": Immutable.Map {
    "n1": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n1",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": "[]",
      "type": "node",
    },
  },
  "_knownIds": Immutable.Set [
    "n1",
  ],
  "_parentWays": Immutable.Map {},
}
`;

exports[`fetchEntities small xml test 2`] = `
Tree {
  "_deletedIds": Immutable.Set [],
  "_entityTable": Immutable.Map {
    "n2": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n2",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": "[]",
      "type": "node",
    },
    "n1": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n1",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": "[]",
      "type": "node",
    },
    "w1": Object {
      "attributes": Object {
        "changeset": "50089927",
        "timestamp": "2017-07-06T17:19:04Z",
        "uid": "2815653",
        "user": "Srihari Thalla",
        "version": "2",
        "visible": true,
      },
      "id": "w1",
      "nodes": Array [
        "n1",
        "n2",
      ],
      "tags": "[]",
      "type": "way",
    },
  },
  "_knownIds": Immutable.Set [
    "n2",
    "w1",
  ],
  "_parentWays": Immutable.Map {
    "n1": Immutable.Set [
      "w1",
    ],
    "n2": Immutable.Set [
      "w1",
    ],
  },
}
`;
